[gd_scene load_steps=6 format=3 uid="uid://cgjka4vyojcnd"]

[ext_resource type="Script" uid="uid://dj75up33wr0e4" path="res://Scripts/FirstPlaceNode.gd" id="1_2ivwj"]
[ext_resource type="Texture2D" uid="uid://2wrmnwm7q8jj" path="res://Art/player_parts/numbah_one.png" id="2_7ur35"]
[ext_resource type="FontFile" uid="uid://cq55vl12vholm" path="res://fonts/3x5 pixel font.ttf" id="2_f4lms"]
[ext_resource type="PackedScene" uid="uid://dwc0cutqm2vpa" path="res://Scenes/PlayerPortrait.tscn" id="3_7ur35"]
[ext_resource type="Texture2D" uid="uid://bow0d2qimqvaf" path="res://Art/types/type_icons.png" id="5_7ur35"]

[node name="FirstPlaceNode" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -144.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
script = ExtResource("1_2ivwj")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="Header" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 83.0
offset_bottom = 83.0
grow_horizontal = 2
mouse_filter = 2

[node name="NumbahOneHolder" type="Control" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NumbahOneSprite" type="Sprite2D" parent="Header/NumbahOneHolder"]
position = Vector2(3, -66)
scale = Vector2(2, 2)
texture = ExtResource("2_7ur35")

[node name="PlayerPortraitHolder" type="Control" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 16.34
offset_bottom = 16.34
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerPortrait" parent="Header/PlayerPortraitHolder" instance=ExtResource("3_7ur35")]
position = Vector2(0, -2)
scale = Vector2(2, 2)

[node name="NameLabel" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -40.0
offset_right = 28.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f4lms")
theme_override_font_sizes/font_size = 12
text = "Armaldo"
horizontal_alignment = 1

[node name="Border" type="ColorRect" parent="Header/NameLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="Header/NameLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 148.0
offset_bottom = 148.0
grow_horizontal = 2

[node name="FightButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f4lms")
theme_override_font_sizes/font_size = 12
text = "Fight"

[node name="EditButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_f4lms")
theme_override_font_sizes/font_size = 12
text = "Fight"

[node name="Type0Holder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 33.0
offset_right = -52.0
offset_bottom = 33.0
grow_horizontal = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Type0Holder"]
scale = Vector2(2, 2)
texture = ExtResource("5_7ur35")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[node name="Type1Holder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 52.0
offset_top = 33.0
offset_right = 52.0
offset_bottom = 33.0
grow_horizontal = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Type1Holder"]
scale = Vector2(2, 2)
texture = ExtResource("5_7ur35")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[connection signal="mouse_entered" from="." to="." method="onMouseEnter"]
[connection signal="mouse_exited" from="." to="." method="onMouseExit"]
[connection signal="pressed" from="HBoxContainer/FightButton" to="." method="onFightPressed"]
[connection signal="pressed" from="HBoxContainer/EditButton" to="." method="onFightPressed"]
